Update gradle build configuration to support multi-project build (#42)
* Update dependencies and gradle wrapper
* Initial restructure for multiproject gradle build
* Update Travis-CI to use JDK11 but also build against early access
* Update to using Java 11 options in Dockerfile
* Stop logging of query string as it is unsafe, instead use spring actuator /actuator/httptrace endpoint
* Run sonarqube in after_success phase in test stage